Added unit tests for OCR-Worker Service and Tesseract